# xloc_ros_wrapper

./: CMakeLists.txt  package.xml
launch/: xloc_ros_wrapper.launch  xloc_ros_wrapper_bak.launch
msg/: Diagnostics.msg
src/: xloc_ros_node.cpp  xloc_ros_node_c_api.cpp
srv/: ChangeMapOrigin.srv  GetCurrentPose.srv  SetInitialPose.srv  StartMapping.srv  StopMapping.srv  StopUpdateMap.srv  SwitchMap.srv
